<resources>
    <string name="app_name">RutasNar</string>
    <string name="username">Nombre de usuario</string>
    <string name="password">Contraseña</string>
    <string name="new_traveler">Sé un nuevo viajero</string>
    <string name="traveler">Bienvenido, viajero</string>
    <string name="welcome_msg">Consulta eventos y actividades, guárdalos según tus gustos y recorre Nariño</string>
    <string name="terms">Si continúas, aceptas todas las condiciones de uso y las políticas de privacidad</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Login">Iniciar Sesión</string>
    <string name="confirm_passwd">Confirmar contraseña</string>
    <string name="register">Registrarme</string>
    <string name="title_activity_event">EventActivity</string>
    <string name="large_text">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
    </string>
    <string name="action_settings">Settings</string>
    <string name="about">
        " Dirección y Control \n\n"
        "• Juan Sebastián Rubio \n"
        "• Juan Esteban Castro \n"
        "\n\n"
        "Diseño y programación\n\n"
        "• Kevin Yama \n"
        "• Luis Angel España"
    </string>
    <string name="about_desc">
         Es una aplicación móvil que permite dar a conocer la cultura y región de Nariño por medio de la oferta de una serie de rutas de exploración y eventos relacionados al turismo.
    </string>
</resources>
