<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UserLoginActivity">

    <EditText
        android:id="@+id/edittext_username"
        android:layout_width="250sp"
        android:layout_height="40dp"
        android:layout_marginTop="100dp"
        android:hint="@string/username"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edittext_passwd"
        android:layout_width="250sp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittext_username" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="253dp"
        android:layout_height="50sp"
        android:layout_marginTop="50dp"
        android:background="@drawable/color_button"
        android:drawableLeft="@drawable/ic_singin"
        android:drawablePadding="-50sp"
        android:hint="@string/Login"
        android:paddingLeft="50sp"
        android:textColorHint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittext_passwd" />

</androidx.constraintlayout.widget.ConstraintLayout>